# scrummage

./: Cargo.toml  LICENSE-MIT  LICENSE-ZLIB  README.md
src/: lib.rs  unix.rs  windows.rs
